--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "audentio/laravel-base": "^1.0",
-        "laravel/passport": "^7.2|^8.0"
+        "laravel/passport": "^7.2|^8.0|^10.0"
     },
     "autoload": {
         "psr-4": {
