--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "php": ">=7.3.0",
         "ext-json": "*",
         "ext-openssl": "*",
-        "audentio/laravel-base": "^1",
-        "laravel/passport": "^7.2|^8.0|^9.0|^10.0"
+        "audentio/laravel-base": "^1|^2",
+        "laravel/passport": "^7.2|^8.0|^9.0|^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
